# WorldEdit-rs

./: Cargo.toml  brush_plan.md  build.rs
.cargo/: config.toml
assets/: README.md
build-tools/: wasi_snapshot_preview1.reactor.wasm
src/: block_data.rs  clipboard.rs  expression.rs  history.rs  lib.rs  mapping.rs  mask.rs  pattern.rs  probe_test.rs  schem_paste.rs  schematic.rs  selection.rs  simplex_noise.rs  snbt.rs  transform.rs
src/commands/: brush.rs  clearclipboard.rs  clearhistory.rs  copy.rs  count.rs  cut.rs  flip.rs  generation.rs  gmask.rs  mod.rs  paste.rs  pos.rs  redo.rs  replace.rs  rotate.rs  schematic.rs  sel.rs  set.rs  shell.rs  size.rs  transform.rs  undo.rs  wand.rs
todo/commands/: README.md  clipboard-transforms.md  entity-and-biome-commands.md  history-and-sessions.md  mask-coverage-and-global-mask.md  navigation-and-tools.md  region-manipulation.md  schematic-formats-and-data.md  selection-shapes.md  shape-generation.md  terrain-and-radius-tools.md
todo/patterns/: README.md  biome-patterns.md  block-data-syntax.md  block-tags.md  clipboard-patterns.md  color-patterns.md  expression-pattern.md  simplex-parity.md  stateful-world-context.md
